--- a/busines/index.html
+++ b/busines/index.html
@@ -185,158 +185,229 @@
 	<div class="round">
 		<h4 class="itxt">Для собственного понимания, внутреннего использования предприятия</h4>
 		<div class="rtxt">От 10 000 руб
-		<p>Цена зависит от сложности проекта</p></div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
-	</div>
-	<!-- 3 -->
-	<div class="round">
-		<h4 class="itxt">Для получения субсидий и грантов Минсельхоза</h4>
-		<div class="rtxt">От 15 000 руб
-		<p>Цена зависит от сложности проекта</p></div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
-	</div>
-	<!-- 4 -->
-	<div class="round">
-		<h4 class="itxt">Для получения субсидий, грантов , разрешений Министерств торговли, промышленности, инноваций и т.д</h4>
-		<div class="rtxt">От 20 000 руб
-		<p>Цена зависит от сложности проекта</p></div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
-	</div>
-	<!-- 5 -->
-	<div class="round">
-		<h4 class="itxt">Для получения статуса резидента в Особой экономической зоне</h4>
-		<div class="rtxt">От 20 000 руб
-		<p>Цена зависит от сложности проекта</p></div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
-	</div>
-	<!-- 6 -->
-	<div class="round">
-		<h4 class="itxt">Для прочих Министерств и гос. органов</h4>
-		<div class="rtxt">От 15 000 руб
-		<p>Цена зависит от сложности проекта</p></div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
-	</div>
-	<!-- 7 -->
-	<div class="round">
-		<h4 class="itxt">Разработка бизнес-планов по международным стандартам</h4>
-		<div class="rtxt">От 25 000 руб
-		<p>Цена зависит от сложности проекта</p></div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
-	</div>
-
-</div>
-
-<div class="l"></div>
-
-
-<div class="last screen">
-	<div class="container">
-		<h1>Закажите бизнес-план с гарантией сейчас</h1>
-		<h2>и получите <i>инвестиции -</i> в свой бизнес</h2>
+			<p>Цена зависит от сложности проекта</p></div>
+			<a href="#zakaz" class="offer">Узнать стоимость	</a>
+		</div>
+		<!-- 3 -->
 		<div class="round">
-			<div class="i i1"></div>
-			<div class="itxt">Гарантия<Br>качества</div>
-		</div>
-		<div class="round">
-			<div class="i i2"></div>
-			<div class="itxt">Международные<br>методики</div>
-		</div>
-		<div class="round">
-			<div class="i i3"></div>
-			<div class="itxt">Опыт работы<br>более 8 лет</div>
-		</div>
-		<div class="round">
-			<div class="i i4"></div>
-			<div class="itxt">Разработка с учетом<br>Вашего региона</div>
-		</div>
-		<a href="#zakaz" class="offer sostrel">Получить бизнес-план</a>
-	</div>
-</div>
-
-<div class="footer">
-	<div class="vopr">У Вас остались вопросы?<Br>
-		<a href="#kons">Получить бесплатную консультацию</a></div>
-
-		<div class="vopr fx">Получите бесплатную демо-версию бизнес-плана на интересующую Вас тему<Br>
-			<a class="offer fxx" href="#freeb">Получить бесплатную демо-версию бизнес-плана</a></div>
-		</div>
-		<div class="header foothead">
-			<div class="logo"></div>
-			<div class="discr">Наши реквизиты:<Br>ОГРН: 5902994053</div>
-			<div class="icon-mess2">
-				<a title="WhatsApp" href="whatsapp://send?phone=+79024785902"><img src="img/whatsapp.svg"></a>
-				<a  title="Viber" href="viber://add?number=79024785902"><img src="img/viber.svg"></a>
+			<h4 class="itxt">Для получения субсидий и грантов Минсельхоза</h4>
+			<div class="rtxt">От 15 000 руб
+				<p>Цена зависит от сложности проекта</p></div>
+				<a href="#zakaz" class="offer">Узнать стоимость	</a>
 			</div>
-			<div class="num">
-				<i></i><br><a href="tel:+79824514313">+7 982 451 4313</a>&nbsp; &nbsp;</div>
-
-			</div>
-
-			<a href="#x" class="overlay" id="zakaz"></a>
-			<div class="popup form-block">
-				<div class="before-form">
-					<div class="formtitle">Получите разработку<br>бизнес-плана</div>
-					<div class="subtitle">по международным стандартам и с гарантией качества</div>
+			<!-- 4 -->
+			<div class="round">
+				<h4 class="itxt">Для получения субсидий, грантов , разрешений Министерств торговли, промышленности, инноваций и т.д</h4>
+				<div class="rtxt">От 20 000 руб
+					<p>Цена зависит от сложности проекта</p></div>
+					<a href="#zakaz" class="offer">Узнать стоимость	</a>
 				</div>
-				<form action="mail.php" method="post" class="orderform" id="orderform6" onsubmit="yaCounter45717960.reachGoal('bizplan');gtag('event', 'bizplan', {'event_category' : 'form'});return true;">
-					<input type="text" name="username" value="" style="display:none" />
-					<input name="heading" type="hidden" value="Заказать бизнес-план за 5 000">
-					<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
-					<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
-					<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
-					<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
-						<input type="checkbox" checked="checked" required>
-						<span class="checkmark"></span>
-					</label>
-					<button class="pointer offer" style="margin-top: 10px;">Получить бизнес-план</button>
-				</form>
-			</div>
-
-			<a href="#x" class="overlay" id="kons"></a>
-			<div class="popup form-block">
-				<div class="before-form">
-					<div class="formtitle">Получите бесплатную консультацию</div>
-					<div class="subtitle">по разработке бизнес-плана</div>
-				</div>
-				<form action="mail.php" method="post" class="orderform" id="orderform5">
-					<input type="text" name="username" value="" style="display:none" />
-					<input name="heading" type="hidden" value="Получить консультацию с лендинга с ценой 5 000">
-					<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
-					<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
-					<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
-					<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
-						<input type="checkbox" checked="checked" required>
-						<span class="checkmark"></span>
-					</label>
-					<button class="pointer offer" style="margin-top: 10px;">Получить консультацию</button>
-				</form>
-			</div>
-			<a href="#x" class="overlay" id="freeb"></a>
-			<div class="popup form-block">
-				<div class="before-form">
-					<div class="formtitle frx">Получите бесплатную демо-версию</div>
-					<div class="subtitle frxx">бизнес-плана на интересующую Вас тему</div>
-				</div>
-				<form action="mail2.php" method="post" class="orderform" id="orderform5" onsubmit="yaCounter45717960.reachGoal('demo');gtag('event', 'demo', {'event_category' : 'form'});return true;">
-					<input type="text" name="username" value="" style="display:none" />
-					<input name="heading" type="hidden" value="Получите бесплатную демо-версию бизнес-плана">
-					<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
-					<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
-					<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
-
-					<div style=" display:none;">
-						<textarea class="form_message" name="form_message" placeholder="Описание бизнес-плана"></textarea>
+				<!-- 5 -->
+				<div class="round">
+					<h4 class="itxt">Для получения статуса резидента в Особой экономической зоне</h4>
+					<div class="rtxt">От 20 000 руб
+						<p>Цена зависит от сложности проекта</p></div>
+						<a href="#zakaz" class="offer">Узнать стоимость	</a>
 					</div>
+					<!-- 6 -->
+					<div class="round">
+						<h4 class="itxt">Для прочих Министерств и гос. органов</h4>
+						<div class="rtxt">От 15 000 руб
+							<p>Цена зависит от сложности проекта</p></div>
+							<a href="#zakaz" class="offer">Узнать стоимость	</a>
+						</div>
+						<!-- 7 -->
+						<div class="round">
+							<h4 class="itxt">Разработка бизнес-планов по международным стандартам</h4>
+							<div class="rtxt">От 25	 000 руб
+								<p>Цена зависит от сложности проекта</p></div>
+								<a href="#zakaz" class="offer">Узнать стоимость	</a>
+							</div>
 
-					<textarea class="form_message" name="idmes" placeholder="Описание бизнес-плана"></textarea>
-					<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
-						<input type="checkbox" checked="checked" required>
-						<span class="checkmark"></span>
-					</label>
-					<button class="pointer offer" style="margin-top: 10px;">Получить демо-версию</button>
-				</form>
-			</div>
-			<link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
-			<script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=fb359e0453ead14866f8c7d3c69be638" charset="UTF-8" async></script>
+						</div>
+						<!-- Отрасли, в которых мы разрабатывали проекты: -->
+						<div class="project">
+							<h2><i>Отрасли, в которых мы разрабатывали проекты:</i></h2>
+							<!-- pro-item 1 -->
+							<div class="pro-item pro1 ">
+								<div class="pro-content fr">
+									<h3>Строительство:</h3>
+									<ul>
+										<li>Строительство технопарков;</li>
+										<li>Строительство складских комплексов;</li>
+										<li>Строительство коттеджных поселков;</li>
+										<li>Завод горячего цинкования.</li>
+									</ul>
+								</div>
+							</div>
 
-			</html>
+							<!-- pro-item 2 -->
+							<div class="pro-item pro2">
+								<div class="pro-content fl">
+									<h3>Услуги для бизнеса:</h3>
+									<ul>
+										<li>Бухгалтерские;</li>
+										<li>Аутстаффинг;</li>
+										<li>Логистические;</li>
+										<li>и т.д.</li>
+									</ul>
+								</div>
+							</div>
+
+							<!-- pro-item 3 -->
+							<div class="pro-item pro3 ">
+								<div class="pro-content fr">
+									<h3>Промышленность и производство:</h3>
+									<ul>
+										<li>Производство гипсокартона;</li>
+										<li>Производство пенопласта;</li>
+										<li>Производство пищевых полуфабрикатов;</li>
+										<li>Производство продуктов питания;</li>
+										<li>Производство строительных материалов;</li>
+									</ul>
+								</div>
+							</div>
+							<!-- pro-item 4 -->
+							<div class="pro-item pro4">
+								<div class="pro-content fl">
+									<h3>Сельское хозяйство</h3>
+									<ul>
+										<li>Товарно-молочные фермы КРС и МРС;</li>
+										<li>Птицефабрики;</li>
+										<li>Гусиные фермы;</li>
+										<li>Выращивание картофеля, овощей, фруктов, зелени и т.д.;</li>
+										<li>Пчеловодство.</li>
+									</ul>
+								</div>
+							</div>
+							<!-- pro-item 5 -->
+							<div class="pro-item pro5">
+								<div class="pro-content fr">
+									<h3>Общепит:</h3>
+									<ul>
+										<li>Рестораны;</li>
+										<li>Кафе, бары различных направленностей;</li>
+										<li>Столовые;</li>
+										<li>Предприятия фуд-кортов;</li>
+										<li>Пекарни и кондитерские.</li>
+									</ul>
+								</div>
+							</div>
+
+							<div class="l"></div>
+
+						</div>
+
+						
+
+						<div class="last screen">
+							<div class="container">
+								<h1>Закажите бизнес-план с гарантией сейчас</h1>
+								<h2>и получите <i>инвестиции -</i> в свой бизнес</h2>
+								<div class="round">
+									<div class="i i1"></div>
+									<div class="itxt">Гарантия<Br>качества</div>
+								</div>
+								<div class="round">
+									<div class="i i2"></div>
+									<div class="itxt">Международные<br>методики</div>
+								</div>
+								<div class="round">
+									<div class="i i3"></div>
+									<div class="itxt">Опыт работы<br>более 8 лет</div>
+								</div>
+								<div class="round">
+									<div class="i i4"></div>
+									<div class="itxt">Разработка с учетом<br>Вашего региона</div>
+								</div>
+								<a href="#zakaz" class="offer sostrel">Получить бизнес-план</a>
+							</div>
+						</div>
+
+						<div class="footer">
+							<div class="vopr">У Вас остались вопросы?<Br>
+								<a href="#kons">Получить бесплатную консультацию</a></div>
+
+								<div class="vopr fx">Получите бесплатную демо-версию бизнес-плана на интересующую Вас тему<Br>
+									<a class="offer fxx" href="#freeb">Получить бесплатную демо-версию бизнес-плана</a></div>
+								</div>
+								<div class="header foothead">
+									<div class="logo"></div>
+									<div class="discr">Наши реквизиты:<Br>ОГРН: 5902994053</div>
+									<div class="icon-mess2">
+										<a title="WhatsApp" href="whatsapp://send?phone=+79024785902"><img src="img/whatsapp.svg"></a>
+										<a  title="Viber" href="viber://add?number=79024785902"><img src="img/viber.svg"></a>
+									</div>
+									<div class="num">
+										<i></i><br><a href="tel:+79824514313">+7 982 451 4313</a>&nbsp; &nbsp;</div>
+
+									</div>
+
+									<a href="#x" class="overlay" id="zakaz"></a>
+									<div class="popup form-block">
+										<div class="before-form">
+											<div class="formtitle">Получите разработку<br>бизнес-плана</div>
+											<div class="subtitle">по международным стандартам и с гарантией качества</div>
+										</div>
+										<form action="mail.php" method="post" class="orderform" id="orderform6" onsubmit="yaCounter45717960.reachGoal('bizplan');gtag('event', 'bizplan', {'event_category' : 'form'});return true;">
+											<input type="text" name="username" value="" style="display:none" />
+											<input name="heading" type="hidden" value="Заказать бизнес-план за 5 000">
+											<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
+											<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
+											<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
+											<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
+												<input type="checkbox" checked="checked" required>
+												<span class="checkmark"></span>
+											</label>
+											<button class="pointer offer" style="margin-top: 10px;">Получить бизнес-план</button>
+										</form>
+									</div>
+
+									<a href="#x" class="overlay" id="kons"></a>
+									<div class="popup form-block">
+										<div class="before-form">
+											<div class="formtitle">Получите бесплатную консультацию</div>
+											<div class="subtitle">по разработке бизнес-плана</div>
+										</div>
+										<form action="mail.php" method="post" class="orderform" id="orderform5">
+											<input type="text" name="username" value="" style="display:none" />
+											<input name="heading" type="hidden" value="Получить консультацию с лендинга с ценой 5 000">
+											<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
+											<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
+											<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
+											<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
+												<input type="checkbox" checked="checked" required>
+												<span class="checkmark"></span>
+											</label>
+											<button class="pointer offer" style="margin-top: 10px;">Получить консультацию</button>
+										</form>
+									</div>
+									<a href="#x" class="overlay" id="freeb"></a>
+									<div class="popup form-block">
+										<div class="before-form">
+											<div class="formtitle frx">Получите бесплатную демо-версию</div>
+											<div class="subtitle frxx">бизнес-плана на интересующую Вас тему</div>
+										</div>
+										<form action="mail2.php" method="post" class="orderform" id="orderform5" onsubmit="yaCounter45717960.reachGoal('demo');gtag('event', 'demo', {'event_category' : 'form'});return true;">
+											<input type="text" name="username" value="" style="display:none" />
+											<input name="heading" type="hidden" value="Получите бесплатную демо-версию бизнес-плана">
+											<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
+											<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
+											<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
+
+											<div style=" display:none;">
+												<textarea class="form_message" name="form_message" placeholder="Описание бизнес-плана"></textarea>
+											</div>
+
+											<textarea class="form_message" name="idmes" placeholder="Описание бизнес-плана"></textarea>
+											<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
+												<input type="checkbox" checked="checked" required>
+												<span class="checkmark"></span>
+											</label>
+											<button class="pointer offer" style="margin-top: 10px;">Получить демо-версию</button>
+										</form>
+									</div>
+									<link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
+									<script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=fb359e0453ead14866f8c7d3c69be638" charset="UTF-8" async></script>
+
+									</html>
