--- a/busines/index.html
+++ b/busines/index.html
@@ -270,7 +270,7 @@
 							<!-- pro-item 4 -->
 							<div class="pro-item pro4">
 								<div class="pro-content fl">
-									<h3>Сельское хозяйство</h3>
+									<h3>Сельское хозяйство:</h3>
 									<ul>
 										<li>Товарно-молочные фермы КРС и МРС;</li>
 										<li>Птицефабрики;</li>
@@ -290,6 +290,20 @@
 										<li>Столовые;</li>
 										<li>Предприятия фуд-кортов;</li>
 										<li>Пекарни и кондитерские.</li>
+									</ul>
+								</div>
+							</div>
+
+							<!-- pro-item 6 -->
+							<div class="pro-item pro6">
+								<div class="pro-content fl">
+									<h3>Услуги для населения:</h3>
+									<ul>
+										<li>Салоны красоты;</li>
+										<li>Кинотеатры;</li>
+										<li>Развлекательные центры;</li>
+										<li>Ночные клубы;</li>
+										<li>Спортивные центры и бассейны.</li>
 									</ul>
 								</div>
 							</div>
