--- a/busines/index.html
+++ b/busines/index.html
@@ -249,7 +249,7 @@
 										<li>Бухгалтерские;</li>
 										<li>Аутстаффинг;</li>
 										<li>Логистические;</li>
-										<li>и т.д.</li>
+										<li>Экономические.</li>
 									</ul>
 								</div>
 							</div>
