--- a/busines/index.html
+++ b/busines/index.html
@@ -280,6 +280,7 @@
 									</ul>
 								</div>
 							</div>
+
 							<!-- pro-item 5 -->
 							<div class="pro-item pro5">
 								<div class="pro-content fr">
@@ -304,6 +305,20 @@
 										<li>Развлекательные центры;</li>
 										<li>Ночные клубы;</li>
 										<li>Спортивные центры и бассейны.</li>
+									</ul>
+								</div>
+							</div>
+
+							<!-- pro-item 7 -->
+							<div class="pro-item pro7">
+								<div class="pro-content fr">
+									<h3>Торговля:</h3>
+									<ul>
+										<li>IT-проекты;</li>
+										<li>Медицина;</li>
+										<li>Столовые;</li>
+										<li>Проекты для нужд государственных органов;</li>
+										<li>И многое другое.</li>
 									</ul>
 								</div>
 							</div>
