--- a/busines/index.html
+++ b/busines/index.html
@@ -171,6 +171,7 @@
 
 <div class="l"></div>
 
+<!-- Получите бизнес-план по лучшей цене -->
 <div class="getit">
 	<h2><i>Получите бизнес-план по лучшей цене</i></h2>
 	<!-- 1 -->
@@ -223,8 +224,37 @@
 								<p>Цена зависит от сложности проекта</p></div>
 								<a href="#zakaz" class="offer">Узнать стоимость	</a>
 							</div>
-
 						</div>
+
+						<!-- Прочие услуги нашей компании -->
+						<div class="other">
+							<div class="other-content">>
+								<h2><i>Прочие услуги нашей компании</i></h2>
+								<div class="round">
+									<div class="i oth1"></div>
+									<div class="itxt">Разработка ТЭО</div>
+								</div>
+								<div class="round">
+									<div class="i oth2"></div>
+									<div class="itxt">Экспертиза бизнес-плана</div>
+								</div>
+								<div class="round">
+									<div class="i oth3"></div>
+									<div class="itxt">Разработка инвестиционных меморандумов</div>
+								</div>
+								<div class="round">
+									<div class="i oth4"></div>
+									<div class="itxt">Разработка инвестиционных<br>проектов</div>
+								</div>
+								<div class="round">
+									<div class="i oth5"></div>
+									<div class="itxt">Разработка финансовых моделей</div>
+								</div>
+
+							</div>
+						</div>
+
+
 						<!-- Отрасли, в которых мы разрабатывали проекты: -->
 						<div class="project">
 							<h2><i>Отрасли, в которых мы разрабатывали проекты:</i></h2>
@@ -329,7 +359,7 @@
 
 						</div>
 
-						
+
 
 						<div class="last screen">
 							<div class="container">
@@ -359,7 +389,7 @@
 							<div class="vopr">У Вас остались вопросы?<Br>
 								<a href="#kons">Получить бесплатную консультацию</a></div>
 
-								
+
 								<div class="header foothead">
 									<div class="logo"></div>
 									<div class="discr">Наши реквизиты:<Br>ОГРН: 5902994053</div>
