--- a/busines/index.html
+++ b/busines/index.html
@@ -247,7 +247,7 @@
 									<div class="itxt">Разработка инвестиционных<br>проектов</div>
 								</div>
 								<div class="round">
-									<div class="i oth5"></div>
+									<div class="i oth"></div>
 									<div class="itxt">Разработка финансовых моделей</div>
 								</div>
 
