--- a/busines/index.html
+++ b/busines/index.html
@@ -180,49 +180,49 @@
 		<div class="rtxt">От 15 000 руб
 			<p>Цена зависит от сложности проекта</p>
 		</div>
-		<a href="#zakaz" class="offer">Узнать стоимость	</a>
+		<a href="#cost" class="offer">Узнать стоимость	</a>
 	</div>
 	<!-- 2 -->
 	<div class="round">
 		<h4 class="itxt">Для собственного понимания, внутреннего использования предприятия</h4>
 		<div class="rtxt">От 10 000 руб
 			<p>Цена зависит от сложности проекта</p></div>
-			<a href="#zakaz" class="offer">Узнать стоимость	</a>
+			<a href="#cost" class="offer">Узнать стоимость	</a>
 		</div>
 		<!-- 3 -->
 		<div class="round">
 			<h4 class="itxt">Для получения субсидий и грантов Минсельхоза</h4>
 			<div class="rtxt">От 15 000 руб
 				<p>Цена зависит от сложности проекта</p></div>
-				<a href="#zakaz" class="offer">Узнать стоимость	</a>
+				<a href="#cost" class="offer">Узнать стоимость	</a>
 			</div>
 			<!-- 4 -->
 			<div class="round">
 				<h4 class="itxt">Для получения субсидий, грантов , разрешений Министерств торговли, промышленности, инноваций и т.д</h4>
 				<div class="rtxt">От 20 000 руб
 					<p>Цена зависит от сложности проекта</p></div>
-					<a href="#zakaz" class="offer">Узнать стоимость	</a>
+					<a href="#cost" class="offer">Узнать стоимость	</a>
 				</div>
 				<!-- 5 -->
 				<div class="round">
 					<h4 class="itxt">Для получения статуса резидента в Особой экономической зоне</h4>
 					<div class="rtxt">От 20 000 руб
 						<p>Цена зависит от сложности проекта</p></div>
-						<a href="#zakaz" class="offer">Узнать стоимость	</a>
+						<a href="#cost" class="offer">Узнать стоимость	</a>
 					</div>
 					<!-- 6 -->
 					<div class="round">
 						<h4 class="itxt">Для прочих Министерств и гос. органов</h4>
 						<div class="rtxt">От 15 000 руб
 							<p>Цена зависит от сложности проекта</p></div>
-							<a href="#zakaz" class="offer">Узнать стоимость	</a>
+							<a href="#cost" class="offer">Узнать стоимость	</a>
 						</div>
 						<!-- 7 -->
 						<div class="round">
 							<h4 class="itxt">Разработка бизнес-планов по международным стандартам</h4>
 							<div class="rtxt">От 25	 000 руб
 								<p>Цена зависит от сложности проекта</p></div>
-								<a href="#zakaz" class="offer">Узнать стоимость	</a>
+								<a href="#cost" class="offer">Узнать стоимость	</a>
 							</div>
 						</div>
 
@@ -247,7 +247,7 @@
 									<div class="itxt">Разработка инвестиционных<br>проектов</div>
 								</div>
 								<div class="round">
-									<div class="i oth"></div>
+									<div class="i oth5"></div>
 									<div class="itxt">Разработка финансовых моделей</div>
 								</div>
 
@@ -419,6 +419,28 @@
 												<span class="checkmark"></span>
 											</label>
 											<button class="pointer offer" style="margin-top: 10px;">Получить бизнес-план</button>
+										</form>
+									</div>
+
+
+									<!-- Окно узнать стоимость -->
+									<a href="#x" class="overlay" id="cost"></a>
+									<div class="popup form-block">
+										<div class="before-form">
+											<div class="formtitle">Получите разработку<br>бизнес-плана</div>
+											<div class="subtitle">по международным стандартам и с гарантией качества</div>
+										</div>
+										<form action="mail.php" method="post" class="orderform" id="orderform6" onsubmit="yaCounter45717960.reachGoal('bizplan');gtag('event', 'bizplan', {'event_category' : 'form'});return true;">
+											<input type="text" name="username" value="" style="display:none" />
+											<input name="heading" type="hidden" value="Заказать бизнес-план за 5 000">
+											<input name="name" class="required" type="text" placeholder="Введите Ваше имя">
+											<input name="phone" class="phoneform required" type="text" placeholder="Введите Ваш телефон">
+											<input name="mail" class="required" type="text" placeholder="Введите Ваш e-mail">
+											<label class="container" style="display: inline !important; color:#4279df;">Согласен на обработку персональных данных
+												<input type="checkbox" checked="checked" required>
+												<span class="checkmark"></span>
+											</label>
+											<button class="pointer offer" style="margin-top: 10px;">Узнать стоимость</button>
 										</form>
 									</div>
 
