--- a/ovk/index.html
+++ b/ovk/index.html
@@ -874,7 +874,7 @@
 			ms.href=hf;document.getElementsByTagName("head")[0].appendChild(ms);
 		}
 		loadCSS("_header.min.css"); //Header Styles (compress & paste to header after release)
-		loadCSS("_main.min.css");   //User Styles + Media Queries
+		loadCSS("main.min.css");   //User Styles + Media Queries
 	</script>
 
 	<!-- Load Scripts -->
