--- a/ovk/index.html
+++ b/ovk/index.html
@@ -873,7 +873,7 @@
 			var ms=document.createElement("link");ms.rel="stylesheet";
 			ms.href=hf;document.getElementsByTagName("head")[0].appendChild(ms);
 		}
-		loadCSS("_header.min.css"); //Header Styles (compress & paste to header after release)
+		loadCSS("header.min.css"); //Header Styles (compress & paste to header after release)
 		loadCSS("main.min.css");   //User Styles + Media Queries
 	</script>
 
